--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
   </form>
 
   <div class="todo-container">
-    <ul class="todo-list"></ul>
+    <ul class="todo-list">
+      <!--this is the formated to be achieved-->
+      <!-- <div class="todo">
+        <li></li>
+        <button>Delete</button>
+        <button>Completed</button>
+      </div> -->
+    </ul>
   </div>
   <script src="./js/app.js"></script>
 </body>
