--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
   <header>
     <h1>Sadin's To-do List</h1>
   </header>
+
   <form>
     <input type="text" class="todo-input">
     <button class="todo-button" type="submit"><i class="fas fa-plus-square"></i></button>
+
+    <div class="select">
+      <select name="todos" type="submit">
+        <option value="all">All</option>
+        <option value="completed">Completed</option>
+        <option value="uncompleted">Uncompleted</option>
+      </select>
+
+    </div>
   </form>
 
   <div class="todo-container">
